--- a/RCode/171205_ZeroInflatedDataSimulation_STEP1.Rmd
+++ b/RCode/171205_ZeroInflatedDataSimulation_STEP1.Rmd
@@ -237,6 +237,10 @@ all.combat.runs.raw <- mclapply(sort(unique(szenarien$combat.run)),  function(x)
   # create model matrix
   my.modcombat <- model.matrix(my.formula, data = my.pheno)
   
+  # this seems to be necessary suddenly
+  # https://support.bioconductor.org/p/95306/
+  BiocParallel::register(BiocParallel::SerialParam())
+  
   # combat on zero-inflated data
   combat.edata.zero.infl <- sva::ComBat(dat = my.edata.y.zero.infl, batch = my.batch, mod = my.modcombat, par.prior = F, prior.plots = T)
   
@@ -289,16 +293,31 @@ all.combat.runs.raw <- mclapply(sort(unique(szenarien$combat.run)),  function(x)
   names(transformed.cols) <- paste0(names(transformed.cols), ".transformed")
   
   combat.data[ , names(transformed.cols) := transformed.cols]
+  cols.transformed <- names(transformed.cols)
   
   #-----------------------------------------------------------------
   # Rescale Transformed data
   #-----------------------------------------------------------------
   
-  combat.data[ , paste0(names(transformed.cols), ".rescaled") := lapply(.SD, function(x){
-    x.new <- sd(x) * x
-    return(x)
-  }), .SDcols = names(transformed.cols)]
-    
+  res <- purrr::map2(.x = combat.data[ , .SD, .SDcols = cols.to.transform],
+              .y = combat.data[ , .SD, .SDcols = cols.transformed],
+              .f = function(x, y) {
+                
+                # multiply the transformed values, now SD = 1, with the SD of the untransformed values to scale them back to its original SD
+                # original sd
+                my.sd <- sd(x)
+                
+                # transformed col * original sd
+                my.y <- y * my.sd
+                return(my.y)
+              })
+  
+  # rename res cols to indicate rescailing
+  names(res) <- paste0(names(res), ".transformed.rescaled")
+  
+  # write rescaled data into combat.data
+  combat.data[ , names(res) := res]
+  
   #-----------------------------------------------------------------
   # Post-ComBat ANOVA
   #-----------------------------------------------------------------
@@ -331,6 +350,7 @@ all.combat.runs.raw <- mclapply(sort(unique(szenarien$combat.run)),  function(x)
     cor.full.data <- tidy(combat.data[, cor.test(x = get(paste0("x.", f)), y = get(paste0("y.", f)), method = "spearman")])
     cor.zero.inflated <- tidy(combat.data[, cor.test(x = get(paste0("x.", f)), y = get(paste0("y.0infl.", f)), method = "spearman")])
     cor.zero.inflated.transformed <- tidy(combat.data[, cor.test(x = get(paste0("x.", f)), y = get(paste0("y.0infl.", f, ".transformed")), method = "spearman")])
+    cor.zero.inflated.transformed.rescaled <- tidy(combat.data[, cor.test(x = get(paste0("x.", f)), y = get(paste0("y.0infl.", f, ".transformed.rescaled")), method = "spearman")])
     
     # compile results
     res <- data.table(spearman.cor.full.data = cor.full.data$estimate,
@@ -348,8 +368,11 @@ all.combat.runs.raw <- mclapply(sort(unique(szenarien$combat.run)),  function(x)
                       linmod.r2.zero.inflated.transformed = linmod.zero.inflated.transformed$r.squared,
                       linmod.pval.zero.inflated.transformed = linmod.zero.inflated.transformed$coefficients[grep("x.", rownames(linmod.zero.inflated.transformed$coefficients)),"Pr(>|t|)"],
                       linmod.beta.zero.inflated.transformed = linmod.zero.inflated.transformed$coefficients[grep("x.", rownames(linmod.zero.inflated.transformed$coefficients)),"Estimate"],
+                      linmod.r2.zero.inflated.transformed.rescaled = linmod.zero.inflated.transformed.rescaled$r.squared,
                       linmod.pval.zero.inflated.transformed.rescaled = linmod.zero.inflated.transformed.rescaled$coefficients[grep("x.", rownames(linmod.zero.inflated.transformed.rescaled$coefficients)),"Pr(>|t|)"],
-                      linmod.beta.zero.inflated.transformed.rescaled = linmod.zero.inflated.transformed.rescaled$coefficients[grep("x.", rownames(linmod.zero.inflated.transformed.rescaled$coefficients)),"Estimate"])
+                      linmod.beta.zero.inflated.transformed.rescaled = linmod.zero.inflated.transformed.rescaled$coefficients[grep("x.", rownames(linmod.zero.inflated.transformed.rescaled$coefficients)),"Estimate"],
+                      spearman.cor.zero.inflated.transformed.rescaled = cor.zero.inflated.transformed.rescaled$estimate,
+                      spearman.cor.pval.zero.inflated.transformed.rescaled = cor.zero.inflated.transformed.rescaled$p.value)
     
     # return res dt just created
     return(res)
