--- a/RCode/171124_ZeroInflatedDataExploration_STEP2.Rmd
+++ b/RCode/171124_ZeroInflatedDataExploration_STEP2.Rmd
@@ -66,7 +66,8 @@ There are a few descisions that I need to make:
 * Best number of categories?
 * Performance compared with dichotomized glm?
 * Performance compared with Rank correlation?
-
+* Performance of ComBat
+* Effect, the Inverse Normal Transformation (INT) has on the data/results
 
 Our best guess was, that grouping the metabolites into more categories than just 2 would result in the retaining of information and thus statistical power. These plots are supposed to illustrate the comparison between dichotomization and different versions of the proportional odds approach.
 
@@ -97,8 +98,8 @@ p1 <- ggplot(all.scenarios, aes(-log10(dicho.pval),
   scale_color_brewer(palette = "Set1") +
   theme_carl()
 
-# plot dicho vs logit pvals
-p1
+# plot dicho vs logit pvals (LARGE PLOT, NOT VERY ILLUSTRATIVE)
+# p1
 ```
 
 Taking the average p-values over all realizations provides a clearer picture for the differences for small effect-sizes. The proportional odds approach clearly outperforms dichotomization. Only when the zero-inflation is as high as 80%, the performances are similar. The table shows the sum of p-values for each approach <= 0.05 for each combination of number of categories and type of category.
@@ -107,21 +108,6 @@ Taking the average p-values over all realizations provides a clearer picture for
 # plot mean (over realizations) dicho vs. prop odds pvals
 # über realisationen mitteln für Übersichtlichkeit
 test.1 <- all.scenarios[, lapply(.SD, mean), by = .(effekt, proz0, categart, categnum, batch.effect)]
-p2 <- ggplot(test.1, aes(x = -log10(dicho.pval),
-                         y = -log10(logit.pval),
-                         col = factor(proz0),
-                         pch = categart,
-                         size = categnum,
-                         alpha = rev(categnum))) + 
-  geom_point() +
-  geom_abline(intercept = 0, slope = 1, lty = 2) + 
-  facet_wrap(~effekt , scales = "free") + 
-  scale_y_continuous(breaks = pretty_breaks(4)) +
-  scale_x_continuous(breaks = pretty_breaks(4)) +
-  theme_carl()
-
-# plot
-# p2
 
 # same as p2 but with different symbols etc.
 p2.5 <- ggplot(test.1, aes(-log10(dicho.pval),
@@ -172,7 +158,24 @@ p3 <- ggplot(test.1, aes(x = -log10(linmod.pval.zero.inflated),
   facet_wrap(~effekt , scales = "free") + 
   ggtitle(label = "P-value comparison", subtitle = "Zero-inflated data fit with proportional-odds model \nagainst zero-inflated data fit with linear model") +
   theme_carl()
+
+# plot 3: -log10 pvalues proportional-odds model vs. linear model
 p3
+
+p3.5 <- ggplot(test.1, aes(x = linmod.beta.zero.inflated,
+                           y = logit.beta,
+                           col = factor(proz0),
+                           pch = categart,
+                           size = categnum,
+                           alpha = rev(categnum))) + 
+  geom_point() +
+  geom_abline(intercept = 0, slope = 1, lty = 2) + 
+  facet_wrap(~effekt , scales = "free") + 
+  ggtitle(label = "Beta comparison", subtitle = "Zero-inflated data fit with proportional-odds model \nagainst zero-inflated data fit with linear model") +
+  theme_carl()
+
+# plot 3.5: betas proportional-odds model vs. linear model
+p3.5
 ```
 
 ## Optimum for number of categories
@@ -258,9 +261,10 @@ p5
 
 ## Additional comparisons
 
-Comparing the results of the, always fit with zero-inflated data, prop-odds model fit with the, either fit to the full or zero-inflated data set, rank correlation and linear model results The boxplots compare the p-value distribution of all approaches.  
+Comparing the results of the, always fit with zero-inflated data, prop-odds model fit with the, either fit to the full or zero-inflated data set, rank correlation and linear model results The boxplots compare the p-value distribution of all approaches. Since we discontinue to look at the differences of area vs. quantiles as a measure for the categories, we'll continue with only the range-based categories. 
 
 ```{r question.4.1.prep, results='markup'}
+# define a general plot function
 q_4 <- function(x,y) {
   p4 <- ggplot(test.1[categart == "bereiche", ], aes(x = -log10(get(x)),
                                                      y = -log10(get(y)),
@@ -275,9 +279,33 @@ q_4 <- function(x,y) {
     scale_color_brewer(palette="Set1") + 
     scale_alpha_continuous(range = c(0.3, 1)) +
     facet_wrap(~effekt , scales = "free") + 
-    theme_light()
+    theme_carl() #+
+    #theme(text = element_text(size=15))
+  
   return(p4)
 }
+
+# when not looking at categorical data
+q_5 <- function(x,y) {
+  p5 <- ggplot(test.1[categart == "bereiche", ], aes(x = -log10(get(x)),
+                                                     y = -log10(get(y)),
+                                                     col = factor(effekt),
+                                                     pch = factor(batch.effect),
+                                                     size = proz0,
+                                                     alpha = rev(proz0))) + 
+    geom_point() +
+    ylab(y) +
+    xlab(x) +
+    geom_abline(intercept = 0, slope = 1, lty = 2) +
+    scale_color_brewer(palette="Dark2") + 
+    scale_alpha_continuous(range = c(0.3, 1)) +
+    facet_wrap(~effekt , scales = "free") + 
+    theme_carl() +
+    theme(text = element_text(size=15))
+  
+  return(p5)
+}
+
 ```
 
 ### Linear model and Spearman's correlation
@@ -285,21 +313,21 @@ q_4 <- function(x,y) {
 First we check what influence the zero-inflation has on the linear model and spearman correlation power. We plot p-values of both approaches with the full and the zero-inflated data against each other. We can see that the the linear model sufferes more from the loss of data even at 20% of zero-values, while the rank correlation starts to suffer visibly at 50% zero-inflation.
 
 ```{r question.4.0}
-p4.0.1 <- q_4(x = "linmod.pval.full.data", y = "linmod.pval.zero.inflated")
-p4.0.1
+p5.0.1 <- q_5(x = "linmod.pval.full.data", y = "linmod.pval.zero.inflated")
+p5.0.1
 
-p4.0.2 <- q_4(x = "spearman.cor.pval.full.data", y = "spearman.cor.pval.zero.inflated")
-p4.0.2
+p5.0.2 <- q_5(x = "spearman.cor.pval.full.data", y = "spearman.cor.pval.zero.inflated")
+p5.0.2
 ```
 
 Comparing between approaches shows the expected advantage of a linear model over rank correlation for the full data set. Zero-inflating the data evens the performance out. The violated normality assumption of the linear model should be considered when choosing between the approaches. A non-parametric approach like Spearman's rank correlation seems like the choice of reason. 
 
 ```{r question.4.1}
-p4.1.2 <- q_4(x = "spearman.cor.pval.full.data", y = "linmod.pval.full.data")
-p4.1.2
+p5.1.2 <- q_5(x = "spearman.cor.pval.full.data", y = "linmod.pval.full.data")
+p5.1.2
 
-p4.1.1 <- q_4(x = "spearman.cor.pval.zero.inflated", y = "linmod.pval.zero.inflated")
-p4.1.1
+p5.1.1 <- q_5(x = "spearman.cor.pval.zero.inflated", y = "linmod.pval.zero.inflated")
+p5.1.1
 ```
 
 ### Linear model and proportional odds model
@@ -307,12 +335,13 @@ p4.1.1
 While the optimal approach of fitting a linear model with the full data set remains superior to the prorportional odds model with zero-inflated data, the advantage all but disappears when fitting the linear model to the zero-inflated data. A small number of categories (<10), which leads to an increased loss of information for the proportional odds model visibly hurts the models performance. Otherwise, zero-inflation creates a level playing field for both models.
 
 ```{r question.4.2}
-# do some tests
 p4.2.1 <- q_4(x = "linmod.pval.full.data", y = "logit.pval")
-p4.2.1
+p4.2.1 + ggtitle(label = "-log10 P-values linmod vs prop-odds",
+                 subtitle = "Comparison of p-values of linear model fit to normally distributed vs.\nproportional-odds model fit to zero-inflated data")
 
 p4.2.2 <- q_4(x = "linmod.pval.zero.inflated", y = "logit.pval")
-p4.2.2
+p4.2.2 + ggtitle(label = "-log10 P-values linmod vs prop-odds",
+                 subtitle = "Comparison of p-values of linear vs. proportional-odds model both fit to zero-inflated data")
 ```
 
 ### Spearman's correlation and proportional odds model
@@ -338,7 +367,8 @@ test.3 <- melt(data = all.scenarios,
                                 "spearman.cor.pval.zero.inflated",
                                 "spearman.cor.pval.full.data",
                                 "spearman.cor.pval.zero.inflated.transformed",
-                                "linmod.pval.zero.inflated.transformed"))
+                                "linmod.pval.zero.inflated.transformed",
+                                "linmod.pval.zero.inflated.transformed.rescaled"))
 
 # outer loop for proz0
 lapply(unique(all.scenarios$proz0), function(y){
@@ -367,7 +397,10 @@ lapply(unique(all.scenarios$proz0), function(y){
 
 Plotting the average effect sizes from the linear model and the prop-odds model reveal a drastic overestimation of effect size with increasing effect size in the data by the prop-odds model. Additionally, the zero-inflation seems to be influencig seems to be adding to to this overestimation while leading to an underestimation of the added effect in the linear model.
 
+### Plot definition
+
 ```{r question.5}
+# plot without -log10
 p_8 <- function(x,y) {
   
   # define
@@ -381,166 +414,275 @@ p_8 <- function(x,y) {
     geom_point() +
     geom_abline(intercept = 0, slope = 1, lty = 2, col = "black") +
     # facet_wrap( ~ , scales = "fixed") +
-    scale_color_brewer(palette = "Spectral") +
+    scale_color_brewer(palette = "Dark2") +
     ylab(y) +
     xlab(x) +
-    scale_x_continuous(breaks = pretty_breaks(6)) +
-    scale_y_continuous(breaks = pretty_breaks(9)) +
+    scale_x_continuous(breaks = pretty_breaks(5)) +
+    scale_y_continuous(breaks = pretty_breaks(5)) +
     scale_alpha_manual(values = c(0.3, 0.5, 0.7, 0.9)) + 
-    theme_carl() +
-  theme(text = element_text(size=18))
+    theme_carl()# +
+    #theme(text = element_text(size=18))
   
   # plot
   p8
 }
 
-
+# plot with -log10 of x & y
 p_9 <- function(x,y) {
   
   # define
   p_9 <- ggplot(test.1[categart == "bereiche",],
-               aes(x = -log10(get(x)),
-                   y = -log10(get(y)),
-                   size = proz0,
-                   col = factor(effekt),
-                   pch = factor(batch.effect),
-                   alpha = rev(factor(proz0)))) +
+                aes(x = -log10(get(x)),
+                    y = -log10(get(y)),
+                    size = proz0,
+                    col = factor(effekt),
+                    pch = factor(batch.effect),
+                    alpha = rev(factor(proz0)))) +
     geom_point() +
     geom_abline(intercept = 0, slope = 1, lty = 2, col = "black") +
     # facet_wrap( ~ , scales = "fixed") +
-    scale_color_brewer(palette = "Spectral") +
+    scale_color_brewer(palette = "Dark2") +
     ylab(y) +
     xlab(x) +
-    scale_x_continuous(breaks = pretty_breaks(6)) +
-    scale_y_continuous(breaks = pretty_breaks(9)) +
+    scale_x_continuous(breaks = pretty_breaks(5)) +
+    scale_y_continuous(breaks = pretty_breaks(5)) +
     scale_alpha_manual(values = c(0.3, 0.5, 0.7, 0.9)) + 
-    theme_carl() +
-  theme(text = element_text(size=18))
+    theme_carl() #+
+    #theme(text = element_text(size=18))
   
   # plot
   p_9
 }
-
-
 ```
 
-## Comparison of inverse-normal transformed zero-inflated data fit in lm()
+### Effect-size plots - prop.-odds
 
-Check performance of inverse-normal transformed data against categorical and regular zero-inflated data
+The effect size/beta of a proportional odds model is not equivalent to the effect size of a linear model. I can't find the conversion factor however. 
 
-```{r question.6}
-# define effect-size plot with zero-inflated linmod data
+```{r q.5.plots}
+# with facet wrap
 p8.1 <- p_8(x = "linmod.beta.zero.inflated",
             y = "logit.beta") + 
-  ggtitle(label = "Beta estimate comparison", subtitle = "Zero-infalted prop-odds vs.\nzero-inflated data fit with lm") +
-  theme(text = element_text(size=15), axis.text.x = element_text(angle=90, hjust=1))
+  ggtitle(label = "Beta estimate comparison", subtitle = "Zero-infalted prop-odds vs.\nzero-inflated data fit with lm")
+
+# split for effect size
+p8.1 + facet_wrap(~effekt , scales = "free")
+
+# in single plot
 p8.1
 
 # define effect-size plot with zero-inflated linmod data
 p8.2 <- p_8(x = "linmod.beta.full.data",
             y = "logit.beta") + 
-  ggtitle(label = "Beta estimate comparison", subtitle = "Zero-infalted prop-odds vs.\n full data fit with lm") +
-  theme(text = element_text(size=15))
+  ggtitle(label = "Beta estimate comparison", subtitle = "Zero-inflated prop-odds vs.\n full data fit with lm")
+
+# single plot
 p8.2
 
-p_9(x = "linmod.pval.full.data", y = "linmod.pval.zero.inflated")
-p_9(x = "linmod.pval.full.data", y = "linmod.pval.zero.inflated.transformed")
+# facetted plot
+p8.2  + facet_wrap(~effekt , scales = "free")
+```
 
-p_8(x = "linmod.pval.zero.inflated", y = "linmod.pval.zero.inflated.transformed")
-p_9(x = "linmod.pval.zero.inflated", y = "linmod.pval.zero.inflated.transformed")
+## Comparison of inverse-normal transformed zero-inflated data fit in lm()
 
-q_4(x = "logit.pval", y = "linmod.pval.zero.inflated.transformed")
+### Effect-size plots
 
-p_8(x = "spearman.cor.pval.zero.inflated", y = "linmod.pval.zero.inflated.transformed")
-p_9(x = "spearman.cor.pval.zero.inflated", y = "linmod.pval.zero.inflated.transformed")
+Check performance of inverse-normal transformed data against categorical and regular zero-inflated data. During the transformation the data is scaled to SD = 1. Rescaling them fixes the wrongly estimated meta for the non-zero-inflated INT transformed data
+
+```{r int.betas}
+# beta zero inflated lm vs. full lm
+p_8(x = "linmod.beta.zero.inflated", y = "linmod.beta.full.data")
+
+# facetted
+p_8(x = "linmod.beta.zero.inflated", y = "linmod.beta.full.data") +
+  facet_wrap(~effekt , scales = "free") +
+  ggtitle(label = "Beta estimate comparison", subtitle = "Zero-inflated data fit to linear model vs.\n full data fit with linear model")
+
+# betas of INT zero inflated data vs. full lm
+p_8(x = "linmod.beta.zero.inflated.transformed", y = "linmod.beta.full.data") +
+  facet_wrap(~effekt , scales = "free") +
+  ggtitle(label = "Beta estimate comparison", subtitle = "Zero-inflated and INT data fit to linear model vs.\n full data fit with linear model")
+
+# betas of rescaled INT zero inflated data vs. full lm
+p_8(x = "linmod.beta.zero.inflated.transformed.rescaled", y = "linmod.beta.full.data") +
+  facet_wrap(~effekt , scales = "free") +
+  ggtitle(label = "Beta estimate comparison", subtitle = "Zero-inflated and INT and rescaled data fit to linear model vs.\n full data fit with linear model")
 
 # effect sizes
-p_8(x = "linmod.beta.zero.inflated.transformed", y = "logit.beta")
-p_8(x = "linmod.beta.zero.inflated.transformed", y = "linmod.beta.zero.inflated") +
+p_8(x = "linmod.beta.zero.inflated.transformed.rescaled", y = "linmod.beta.zero.inflated") +
+  # xlim(c(0,0.4)) +
+  # ylim(c(0,0.4)) +
+  geom_vline(xintercept = c(0,0.01,0.02,0.05,0.1,0.3)) +
+  geom_hline(yintercept = c(0,0.01,0.02,0.05,0.1,0.3)) +
+  ggtitle(label = "Beta comparison",
+          subtitle = "zero-inflated data ~ zero-inflated IN transformed and rescaled data")
+
+p_8(x = "linmod.beta.zero.inflated.transformed.rescaled", y = "linmod.beta.full.data") +
   xlim(c(0,0.4)) +
   ylim(c(0,0.4)) +
   geom_vline(xintercept = c(0,0.01,0.02,0.05,0.1,0.3)) +
   geom_hline(yintercept = c(0,0.01,0.02,0.05,0.1,0.3)) +
   ggtitle(label = "Beta comparison",
-          subtitle = "zero-inflated data ~ zero-inflated transformed data")
+          subtitle = "Full data ~ zero-inflated IN transformed and rescaled data")
+```
 
-p_8(x = "linmod.beta.zero.inflated.transformed", y = "linmod.beta.full.data") +
-  xlim(c(0,0.4)) +
-  ylim(c(0,0.4)) +
-  geom_vline(xintercept = c(0,0.01,0.02,0.05,0.1,0.3)) +
-  geom_hline(yintercept = c(0,0.01,0.02,0.05,0.1,0.3)) +
-  ggtitle(label = "Beta comparison",
-          subtitle = "Full data ~ zero-inflated transformed data")
+### P-value plots
 
+compare the -log10 p-values of the regular lm fit to full data, zero-inflated and INT data.
+
+```{r question.6}
+# Comparison with full data
+p_9(x = "linmod.pval.full.data", y = "linmod.pval.zero.inflated") + facet_wrap(~effekt , scales = "free") +
+  ggtitle(label = "P-value comparison",
+          subtitle = "Full data ~ zero-inflated untransformed data")
+
+p_9(x = "linmod.pval.full.data", y = "linmod.pval.zero.inflated.transformed") + facet_wrap(~effekt , scales = "free") +
+  ggtitle(label = "P-value comparison",
+          subtitle = "Full data ~ zero-inflated IN-transformed data")
+
+p_9(x = "linmod.pval.full.data", y = "linmod.pval.zero.inflated.transformed.rescaled") + facet_wrap(~effekt , scales = "free") +
+  ggtitle(label = "P-value comparison",
+          subtitle = "Full data ~ zero-inflated IN-transformed and rescaled data")
+
+# comparison zero inflated untransformed vs transformed
+p_9(x = "linmod.pval.zero.inflated", y = "linmod.pval.zero.inflated.transformed.rescaled") + facet_wrap(~effekt , scales = "free") +
+  ggtitle(label = "P-value comparison",
+          subtitle = "zero-inflated untransformed data ~ zero-inflated IN-transformed data")
+
+# INT zero-inflated data vs spearman cor. of untransformed data
+p_9(x = "spearman.cor.pval.zero.inflated", y = "linmod.pval.zero.inflated.transformed.rescaled") + facet_wrap(~effekt , scales = "free") +
+  ggtitle(label = "P-value comparison",
+          subtitle = "zero-inflated untransformed ~ zero-inflated IN-transformed and rescaled data")
+```
+
+### QQ plots of batch-effect ANOVA pre- and post-ComBat
+
+#### For the mean data
+
+```{r qq.plots.anova}
 # pvals, beta, r² of transformed data based on batch 1/0
-
 qq_conf(test.1$p.ANOVA.full.pre.ComBat, main = "QQplot full data before ComBat")
 qq_conf(test.1$p.ANOVA.full.post.ComBat, main = "QQplot full data after ComBat")
+
+# for zero-inflated data
 qq_conf(test.1$p.ANOVA.zero.infl.pre.ComBat, main = "QQplot zero-inflated data before ComBat")
 qq_conf(test.1$p.ANOVA.zero.infl.post.ComBat, main = "QQplot zero-inflated data after ComBat")
 
-# pvalues based on batch.effect
-ggplot(test.1[categart == "bereiche" & categnum == 20,], aes(-log10(linmod.pval.zero.inflated),
-                                                             -log10(linmod.pval.zero.inflated.transformed),
-                                                             col = factor(proz0),
-                                                             pch = factor(batch.effect))) +
-  geom_point() +
-  facet_wrap(~effekt, scales = "free") +
-  scale_x_continuous(breaks = pretty_breaks(4)) +
-  scale_y_continuous(breaks = pretty_breaks(4)) +
-  geom_abline(intercept = 0, slope = 1, lty = 2) +
-  scale_color_brewer(palette="Spectral") +
-  scale_alpha_manual(values = c(0.3, 0.5, 0.7, 0.9)) + 
-  theme_minimal()
+# for transformed data
+qq_conf(test.1$p.ANOVA.zero.infl.post.ComBat.post.transformation, main = "QQplot zero-inflated & transformed data post ComBat")
+```
 
-ggplot(test.1[categart == "bereiche",], aes(-log10(linmod.pval.full.data),
-                                            -log10(linmod.pval.zero.inflated.transformed),
-                                            col = factor(categnum),
-                                            pch = factor(batch.effect),
-                                            size = proz0,
-                                            alpha = rev(factor(proz0)))) +
-  geom_point() +
-  facet_wrap(~effekt, scales = "free") +
-  scale_x_continuous(breaks = pretty_breaks(4)) +
-  scale_y_continuous(breaks = pretty_breaks(4)) +
-  geom_abline(intercept = 0, slope = 1, lty = 2) +
-  scale_color_brewer(palette="Spectral") +
-  scale_alpha_manual(values = c(0.3, 0.5, 0.7, 0.9)) + 
-  theme_carl()
+#### For one example block w/ & w/o batch effects
 
+```{r qq.plots.anove.example}
+# check anova transformed
+# full data
+# with out 
+qq_conf(all.scenarios[combat.run == 1, p.ANOVA.full.pre.ComBat],
+        main = "QQ plot of ANOVA p-vals on full data\nwithout batch effects pre-ComBat")
+qq_conf(all.scenarios[combat.run == 1, p.ANOVA.full.post.ComBat],
+        main = "QQ plot of full data without batch effects pre-ComBat")
 
+# with batch effect
+qq_conf(all.scenarios[combat.run == 251, p.ANOVA.full.pre.ComBat],
+        main = "QQ plot of full data with batch effects pre-ComBat")
+qq_conf(all.scenarios[combat.run == 251, p.ANOVA.full.post.ComBat],
+        main = "QQ plot of full data with batch effects pre-ComBat")
 
-p10 <- ggplot(test.1[categart == "bereiche" & categnum == 20, ],
-              aes(x = -log10(p.ANOVA.full.post.ComBat),
-                  y = -log10(p.ANOVA.zero.infl.post.ComBat),
-                  col = factor(proz0),
-                  pch = factor(batch.effect),
-                  size = batch.effect)) + 
-  geom_point() +
-  ylab("p.ANOVA.zero.infl.post.ComBat") +
-  xlab("p.ANOVA.full.post.ComBat") +
-  geom_abline(intercept = 0, slope = 1, lty = 2) +
-  scale_color_brewer(palette="Set1") + 
-  scale_size(range = c(2, 4)) +
-  facet_wrap(~effekt , scales = "free") + 
-  theme_light()
-p10
+# without batch effect
+qq_conf(all.scenarios[combat.run == 1, p.ANOVA.zero.infl.pre.ComBat],
+        main = "QQ plot of zero-inflated data without batch effects pre-ComBat")
+qq_conf(all.scenarios[combat.run == 1, p.ANOVA.zero.infl.post.ComBat],
+        main = "QQ plot of zero-inflated data without batch effects post-ComBat")
+qq_conf(all.scenarios[combat.run == 1, p.ANOVA.zero.infl.post.ComBat.post.transformation],
+        main = "QQ plot of zero-inflated data without batch\neffects post-ComBat after INT")
 
-p11 <- ggplot(test.1[categart == "bereiche" & categnum == 20, ],
-              aes(x = -log10(p.ANOVA.full.pre.ComBat),
-                  y = -log10(p.ANOVA.zero.infl.pre.ComBat),
-                  col = factor(proz0),
-                  pch = factor(batch.effect),
-                  size = batch.effect)) + 
-  geom_point() +
-  ylab("p.ANOVA.zero.infl.pre.ComBat") +
-  xlab("p.ANOVA.full.pre.ComBat") +
-  geom_abline(intercept = 0, slope = 1, lty = 2) +
-  scale_color_brewer(palette="Set1") + 
-  scale_size(range = c(2, 4)) +
-  facet_wrap(~effekt , scales = "free") + 
-  theme_light()
-p11
+# with batch-effect
+qq_conf(all.scenarios[combat.run == 251, p.ANOVA.zero.infl.pre.ComBat],
+        main = "QQ plot of zero-inflated data with batch effects pre-ComBat")
+qq_conf(all.scenarios[combat.run == 251, p.ANOVA.zero.infl.post.ComBat],
+        main = "QQ plot of zero-inflated data with batch effects post-ComBat")
+qq_conf(all.scenarios[combat.run == 251, p.ANOVA.zero.infl.post.ComBat.post.transformation],
+        main = "QQ plot of zero-inflated data with batch\neffects post-ComBat after INT")
+```
+
+# weird associations after INT
+
+```{r int.batch.problem, eval = F, include = F}
+# first get the combat.data from STEP1 for combat run 251
+
+fit_plots <- function(combat.data, pdf_name){
+# ComBated data
+pdf(pdf_name, width = 14)
+par(mfrow=c(1,2))
+for (i in c(81, 85, 89, 93)) {
+  
+  # very ugly ad hoc indexing
+  my.zero.infl <- c(0,20,50,80)
+  dummy.index <- c(81, 85, 89, 93)
+  my.dummy.index <- which(i == dummy.index)
+  
+  # set indices
+  my.y <- paste0("y.0infl.", i)
+  my.x <- paste0("x.", i)
+  my.y.tr <- paste0("y.0infl.", i, ".transformed.rescaled")
+  
+  # fit lm
+  lm <- lm(get(my.y) ~ get(my.x), data = combat.data)
+  
+  # coeffs for lm
+  rmse <- round(sqrt(mean(resid(lm)^2)), 2)
+  coefs <- coef(lm)
+  b0 <- round(coefs[1], 2)
+  b1 <- round(coefs[2],2)
+  r2 <- round(summary(lm)$r.squared, 2)
+  
+  # Now build up the equation using constructs described in ?plotmath:
+  eqn <- bquote(italic(beta) == .(b1) * "," ~~ 
+                  r^2 == .(r2) * "," ~~ RMSE == .(rmse))
+  
+  
+  lm.tr<- lm(get(my.y.tr) ~ get(my.x), data = combat.data)
+  
+  # coeffs for lm
+  rmse.tr <- round(sqrt(mean(resid(lm.tr)^2)), 2)
+  coefs.tr <- coef(lm.tr)
+  b0.tr <- round(coefs.tr[1], 2)
+  b1.tr <- round(coefs.tr[2],2)
+  r2.tr <- round(summary(lm.tr)$r.squared, 2)
+  
+  # Now build up the equation using constructs described in ?plotmath:
+  eqn.tr <- bquote(italic(beta) == .(b1.tr) * "," ~~ 
+                  r^2 == .(r2.tr) * "," ~~ RMSE == .(rmse.tr))
+  
+  
+  
+  # untransformed
+  combat.data[ , plot(get(my.x), get(my.y), main = paste0("Untransformed, ",
+                                                          my.zero.infl[my.dummy.index],
+                                                          "% zero-inflated data"),
+                      sub = eqn, xlab = "", ylab = "")]
+  combat.data[ , abline(lm, lwd = 3, col = "red")]
+
+  # transformed
+  combat.data[ , plot(get(my.x), get(my.y.tr), main = paste0("INT, ",
+                                                          my.zero.infl[my.dummy.index],
+                                                          "% zero-inflated data"),
+                      sub = eqn.tr, xlab = "", ylab = "")]
+  
+  combat.data[ , abline(lm.tr, lwd = 3, col = "red")]
+
+}
+par(mfrow=c(1,1))
+dev.off()
+}
+
+# create the data for combat run 251 twice! NEEDS TO BE DONE MANUALLY
+# without ComBat but including the transformation
+fit_plots(combat.data = combat.data, pdf_name = "zero_inflated_fit_NO_ComBat")
+
+# with combat and transformation
+fit_plots(combat.data = combat.data, pdf_name = "zero_inflated_fit_AFTER_ComBat")
 
 ```
 
